--- a/templates/home/guest_home.html
+++ b/templates/home/guest_home.html
@@ -27,7 +27,9 @@
             
         </div>
         
-        
+        <div id="back-button">
+            
+        </div>
         
         <div class="guest-button-grid">
             {% include 'home/result_list.html' %}
