Fixed back button in items

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -27,6 +27,10 @@
             {% endfor %}
         </div>
 
+        <div id="back-button">
+            
+        </div>
+
         <div id="category_item" class="category_div">
             <div id="item_list">
 
