--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -7,11 +7,36 @@
     </head>
     <h1>USER PROFILE</h1>
     <body>
+
         <button><a href="{% url 'home' %}">Home</a></button>
         <button><a href="{% url 'recents' %}">Recents</a></button>
         <button><a href="{% url 'show_unreturned_items' %}">Unreturned</a></button>
         <button><a href="{% url 'notification' %}">Notification</a></button>
         <button><a href="{% url 'userprofile' %}">Account</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
-    </body>
-</html>
+
+        
+
+        <div style="display: flex; align-items: center; margin-top: 20px;">
+            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="Profile Image" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 50%;">
+
+            <div style="margin-left: 20px;">
+                    <h2 class="account-heading">{{ user.username }}</h2>
+                    <p class="text-secondary" style="margin-top: 10px;">Account Name: {{ user.profile.account_name }}</p>
+                    <p class="text-secondary" style="margin-top: 10px;">Email: {{ user.email }}</p>
+                    <p class="text-secondary" style="margin-top: 10px;">Contact Number: {{ user.profile.contact_number }}</p>
+ 
+
+                    <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
+              </div>
+            </div>
+
+            <style>
+                .form-container {
+                    margin-top: 20px; /* Adjust the margin as needed */
+                }
+            </style>
+
+            
+            
+            
