Fixed login bug

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -19,7 +19,7 @@
                 <input class = "email" type = "email" name = "email" id = "email" placeholder = "Input your email..." required>
                 <input class = "password" type="password" name="password" id="password" placeholder="Input your password..." required>
     
-                <button><a href="{% url 'login' %}">Login</a></button>
+                <button type="submit">Login</button>
             </form>
     </body>
 </html>
