update recents and unreturned
-apply sort/order (latest borrowed items comes first) - (both recent and unreturned)

--- a/templates/recents/admin_recents.html
+++ b/templates/recents/admin_recents.html
@@ -20,7 +20,7 @@
 
             <!-- test block code -->
             <!-- template for the items -->
-            {% for items in borrowed_item %}
+            {% for items in borrowed_item reversed %}
             <div id="wrapper">
                 <div id="top">
                     <div id="left">
