--- a/templates/unreturned/admin_unreturned.html
+++ b/templates/unreturned/admin_unreturned.html
@@ -20,7 +20,7 @@
 
             <!-- test block code -->
             <!-- template for the items -->
-            {% for item in unreturned_items %}
+            {% for item in unreturned_items reversed %}
             <div id="wrapper">
 
                 <div id="top">
