--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -22,7 +22,7 @@
 
             <!-- test block code -->
             <!-- template for the items -->
-            {% for items in borrowed_item %}
+            {% for items in borrowed_item reversed %}
             <div id="wrapper">
                 <div id="top">
                     <div id="left">
