--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -22,7 +22,7 @@
 
             <!-- test block code -->
             <!-- template for the items -->
-            {% for item in unreturned_items %}
+            {% for item in unreturned_items reversed %}
             <div id="wrapper">
 
                 <div id="top">
