--- a/static/recents/recentstyle.css
+++ b/static/recents/recentstyle.css
@@ -102,7 +102,7 @@ Start coding here
 
 /* jonas design */
 
-* {
+/* * {
     font-family: Arial, Helvetica, sans-serif; background-color: gray;
 }
 body {
@@ -178,4 +178,4 @@ button a {
 
 .active_tab{
     text-decoration: underline; color: pink;
-}
+} */
