--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -101,7 +101,7 @@ Start coding here
 */
 
 /* jonas design */
-* {
+/* * {
     font-family: Arial, Helvetica, sans-serif; background-color: gray;
 }
 body {
@@ -176,4 +176,4 @@ button a {
 
 .active_tab{
     text-decoration: underline; color: pink;
-}
+} */
