--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -14,12 +14,23 @@
         <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
 
-        <div class="categories">
+        <div class="categories" id="category_container">
             {% for category in categories %}
             <button onclick="showItem('{{ category }}')" class="category_button">{{ category }}</button>
             {% endfor %}
         </div>
+
+        <div id="edit_category_buttons">
+            <button onclick="editCategory()">Edit</button>
+        </div>
+
+        <div id="add_category_form" class="add_category_form">
+
+        </div>
         
+        <div id="delete_confirmation" class="delete_confirmation">
+
+        </div>
         
         <div id="category_item" class="category_div">
             <div id="item_list">
@@ -28,7 +39,7 @@
             <div id="edit_back_buttons">
                 
             </div>
-            <div id="add_item">
+            <div id="add_item" class="add_item">
                 <div id="add_item_form">
 
                 </div>
@@ -38,6 +49,7 @@
                 <div id="success_popup">
 
                 </div>
+                
             </div>
             <h1>{{ current_category }}</h1>
             {% for item in cleaning_inventory %}
