--- a/templates/home/item_form.html
+++ b/templates/home/item_form.html
@@ -1,9 +1,14 @@
 <form action="/save_item_form/" id="itemFormId" method="post">
     {% csrf_token %}
+    <p>Item name:</p>
     {{ item_form.item_name }}
+    <p>Item description:</p>
     {{ item_form.item_description }}
+    <p>Item photo:</p>
     {{ item_form.item_photo }}
+    <p>Item category:</p>
     {{ item_form.item_category }}
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Next">
+    <button onclick="closeForm()">Cancel</button>
 </form>
