--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -951,17 +951,99 @@ body {
    
   }
 
+  
+    /*display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    border: 0.5px solid rgb(171, 177, 177);
+    border-radius: 6px;
+    height: 230px;
+    width: 170px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    background-color: rgb(255, 255, 255);
+    background-repeat: no-repeat;
+    background-size: 130px;
+    background-position: 50% 20%;
+    transition-duration: 0.2s;
+
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: bottom;
+    color: #000;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: solid rgb(171, 177, 177) 1px;
+  */
+
   .category_button {
-    padding: 10px;
-    font-size: medium;
-    font-weight: bold;
-    background-color: white;
+    position: relative;
     color: black;
-    border: 4px solid #7A1A22;
-    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    border: 0.5px solid rgb(171, 177, 177);
+    border-radius: 6px;
+    height: 230px;
+    width: 170px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    background-color: rgb(255, 255, 255);
+    background-repeat: no-repeat;
+    background-size: 130px;
+    background-position: 50% 20%;
+    transition-duration: 0.2s;
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    
   }
+
+.category_button::after {
+    /* Create a pseudo-element to act as a spacer */
+    content: "";
+    display: block;
+    height: 100%; /* Take up the full height of the relative container */
+}
+
+.category_button span {
+    /* Absolute positioning for the text */
+    position: absolute;
+    bottom: 0; /* Align the text to the bottom */
+    left: 0; /* Align the text to the left */
+    right: 0; /* Align the text to the right */
+    text-align: center; /* Center the text horizontally */
+    
+}
+
+
+  .category_button:nth-child(1){
+    background-image: url(../home/clean.png);
+    background-size:110px;
+    background-position: center;
+  }
+  .category_button:nth-child(2){
+    background-image: url(../home/furnitures.png);
+    background-size: 160px;
+    background-position: center;
+    
+    
+  }
+  .category_button:nth-child(3){
+    background-image: url(../home/documents.png);
+    background-position: center;
+  }
+  .category_button:nth-child(4){
+    background-image: url(../home/gadgets.png);
+    background-position: center;
+  }
+  .category_button:nth-child(5){
+    background-image: url(../home/room.png);
+    background-position: center;
+  }
+
 
   .category_button:hover {
     background-color: #f36d34;
@@ -977,7 +1059,7 @@ body {
     padding: 10px;
     margin-right:30px;
     background-color:orangered ;
-    color: white;
+    color: black;
     font-weight: bold;
     border: none;
     border: 2px solid orangered;
@@ -1055,10 +1137,10 @@ body {
 }
 /*remove */
 button {
-  background-color: #fc3f00;
+  background-color: #E67C37;
   margin-top: 5px;
-  color: #fff;
-  border: 2px solid #fc3f00;
+  color: black;
+  border: 2px solid #E67C37;
   padding: 5px;
   cursor: pointer;
   border-radius: 5px;
@@ -1177,7 +1259,7 @@ button p:hover {
 }
 
 #item_body td {
-  border: 2px solid #E67C37;
+  border: 2px solid black;
   padding: 8px;
   text-align: left;
 
@@ -1455,30 +1537,13 @@ button:hover {
   background-color: white; /* Slightly lighter color on hover */
   color: black;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ /*row item*/
+ .rowitembutton{
+  display: flex;
+  align-items: center;
+  height: 100%;
+  
+ }
 
 
   /* Media queries for responsiveness */
