added seaarch funtion in admin

--- a/templates/userprofile/admin_userprofile.html
+++ b/templates/userprofile/admin_userprofile.html
@@ -7,7 +7,7 @@
     </head>
     <h1>ADMIN USER PROFILE</h1>
     <body>
-        <form method="GET" action="{% url 'search_items' %}">
+        <form method="GET" action="{% url 'search_items_admin' %}">
             <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
             <button type="submit">Search</button>
           </form>
@@ -17,6 +17,6 @@
         <button><a href="{% url 'members' %}">Members</a></button>
         <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
-        {% include 'home/result_list.html' %}
+        {% include 'home/result_list_admin.html' %}
     </body>
 </html>
