--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -7,7 +7,7 @@
     </head>
     <h1>ADMIN HOME</h1>
     <body>
-        <form method="GET" action="{% url 'search_items' %}">
+        <form method="GET" action="{% url 'search_items_admin' %}">
             <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
             <button type="submit">Search</button>
           </form>
@@ -17,7 +17,7 @@
         <button><a href="{% url 'members' %}">Members</a></button>
         <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
-        {% include 'home/result_list.html' %}
+        
 
         <div class="categories" id="category_container">
             {% for category in categories %}
@@ -79,7 +79,9 @@
             
             
         </div>
-
+        
+        {% include 'home/result_list_admin.html' %}
+        
         <script defer src="{% static 'home/homeadminscript.js' %}"></script>
     </body>
 </html>
