--- a/templates/home/guest_home.html
+++ b/templates/home/guest_home.html
@@ -7,12 +7,12 @@
     </head>
     <h1>GUEST HOME</h1>
     <body>
-        <form method="GET" action="{% url 'search_items' %}">
+        <form method="GET" action="{% url 'search_items_guest' %}">
             <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
             <button type="submit">Search</button>
           </form>
         <button><a href="{% url 'home' %}">Home</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
-        {% include 'home/result_list.html' %}
+        {% include 'home/result_list_guest.html' %}
     </body>
 </html>
