--- a/templates/home/result_list_guest.html
+++ b/templates/home/result_list_guest.html
@@ -1,13 +1,12 @@
 <div id="resultImageContainer"></div>
 {% if results %}
 <ul>
-    <a href="{% url 'home' %}"><button>Back</button></a>
 {% for result in results %}
     <li>
         <div>
             <img src="{% if result.item_photo %}/media/{{ result.item_photo }}{% else %}/static/path/to/placeholder-image.jpg{% endif %}" alt="{{ result.item_name }}" style="width: 100px; height: 100px;">
             <button onclick="showBorrowForm('{{ result.item_id }}', '{{ result.item_name }}')">{{ result.item_name }}</button>
-            
+            <a href="{% url 'guest_home' %}"><button>Back</button></a>
         </div>
     </li>
 {% endfor %}
