admin_userprofile update

--- a/templates/userprofile/admin_userprofile.html
+++ b/templates/userprofile/admin_userprofile.html
@@ -13,5 +13,25 @@
         <button><a href="{% url 'members' %}">Members</a></button>
         <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
+
+        <div style="display: flex; align-items: center; margin-top: 20px;">
+            <img class="rounded-circle account-img" src="{{ user_profile.image.url }}" alt="Profile Image" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 50%;">
+
+            <div style="margin-left: 20px;">
+                <h2 class="account-heading">{{ user_profile.user.username }}</h2>
+                <p class="text-secondary" style="margin-top: 10px;">Account Name: {{ user_profile.account_name }}</p>
+                <p class="text-secondary" style="margin-top: 10px;">Email: {{ user_profile.user.email }}</p>
+                <p class="text-secondary" style="margin-top: 10px;">Contact Number: {{ user_profile.contact_number }}</p>
+
+                <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
+            </div>
+        </div>
+
+        <style>
+            .form-container {
+                margin-top: 20px; /* Adjust the margin as needed */
+            }
+        </style>
+
     </body>
 </html>
