--- a/templates/home/borrow_form.html
+++ b/templates/home/borrow_form.html
@@ -1,13 +1,17 @@
 <form action="/save_borrow_form/" id="borrowFormId" method="post">
-    {% csrf_token %}
-    <p>Quantity to be borrowed:</p>
-    {{ borrow_form.item_quantity }}
-    <p>Date when you want to borrow the item:</p>
-    {{ borrow_form.item_date_borrowed }}
-    <p>Date when you want to return the item(can be blank):</p>
-    {{ borrow_form.item_date_returned }}
-    {{ borrow_form.item_stock }}
-
-    <input type="submit" value="Submit">
+    {% csrf_token %}  
+    <div class="borrow-row">
+        <div class="item-borrow-row"> 
+            <p>Quantity to be borrowed:</p>
+            {{ borrow_form.item_quantity }}
+        
+            <p>Date when you want to borrow the item:</p>
+            {{ borrow_form.item_date_borrowed }}   
+            <p>Date when you want to return the item(can be blank):</p>
+            {{ borrow_form.item_date_returned }}
+            {{ borrow_form.item_stock }}
+            <input type="submit" value="Submit">
+        </div> 
+    </div>
 </form>
 
