admin editprofile updates

--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="{% static 'userprofile/userprofile.css' %}">
         <title>EDIT USER PROFILE</title>
     </head>
-    <h1>EDIT USER PROFILE</h1>
+    <h1>ADMIN / USER PROFILE</h1>
 <body>
     <div class="form-container">
         <form method="POST" enctype="multipart/form-data">
