--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -1589,23 +1589,32 @@ button:hover {
   flex-wrap: wrap; /* Allow items to wrap to the next row if necessary */
 }
 
+.row-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px;
+  border: 2px black;
+}
+
 .square-container {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-content: center;
+  flex-direction: column; /* Change this to 'row' */
   border: 2px solid rgb(171, 177, 177);
   border-radius: 6px;
-  height: 180px;
+  height: 150px;
   width: 130px;
-  padding: 10px; /* Adjust padding as needed */
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   background-color: rgb(255, 255, 255);
-  margin: 10px; /* Adjust margin for spacing between items */
   flex-shrink: 0;
 }
 
-.square-container:hover {
-  border: solid  rgb(230,124,55) 2px;
+.row-container:hover {
+  border: solid rgb(230, 124, 55) 2px;
+  
 }
 
 .item-photo {
@@ -1614,10 +1623,10 @@ button:hover {
   align-items: center;
   margin-right: 10px;
   padding-bottom: 5px;
-  border-bottom: 0.5px solid rgb(171,177,177);
+  border-bottom: 0.5px solid rgb(171, 177, 177);
 }
 
-.item-name{
+.item-name {
   margin-top: 5px;
   font-size: 14px;
   font-weight: bold;
@@ -1626,13 +1635,15 @@ button:hover {
 
 .item-button {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
   margin-top: 5px;
   flex-wrap: wrap;
   align-content: center;
   gap: 1em;
 }
+
+
+
 /*add back remove*/
 #edit_back_buttons {
   display: flex;
@@ -1649,6 +1660,8 @@ button:hover {
 #edit_back_buttons button {
   margin-right: 10px; /* Adjust the right margin for spacing */
   border: 4px solid black;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 
