--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -21,5 +21,7 @@
     
                 <button type="submit">Login</button>
             </form>
+
+            <div class = "forgot_pass"><a href="{% url 'reset_password' %}" target="_blank">Forgot password?</a> </div> 
     </body>
 </html>
