--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -18,5 +18,9 @@
         <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
         {% include 'home/result_list_admin.html' %}
+
+        {% for users in faculty %}
+          <button>{{ users.username }}</button>
+        {% endfor %}
     </body>
 </html>
