--- a/static/home/homegueststyle.css
+++ b/static/home/homegueststyle.css
@@ -257,7 +257,14 @@ Start coding here
     margin-right: 50px;
     border-radius: 5px;
 }
-  
+
+.category-title-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}  
+
 .category-container-title {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
@@ -265,7 +272,7 @@ Start coding here
     margin-left: 18px;
     width: 0;
 }
-  
+
 .categories {
     display: flex;
     flex-direction: row;
@@ -397,7 +404,7 @@ Start coding here
     gap: 1em;
 }
 
-.back-button{
+.item_button{
     background-color: rgb(255, 255, 255);
     border:solid  rgb(153, 153, 153) 2px;
     padding-top: 5px;
@@ -412,6 +419,28 @@ Start coding here
     text-align: center bottom;
     font-family: Arial;
 }
+
+.back-button{
+    background-color: rgb(255, 255, 255);
+    border:solid  rgb(153, 153, 153) 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+    vertical-align: top;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center bottom;
+    font-family: Arial;
+}
+
+.item_button:hover {
+    color: rgb(230,124,55);
+    border: solid rgb(230,124,55) 2px;
+}
+
 
 .back-button:hover {
     color: rgb(230,124,55);
