--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -240,7 +240,7 @@ h1 {
     opacity: 1;
     pointer-events: all;
 }
-/* styles.css */
+/* kasama sa bago */
 
 body {
     margin: 0;
@@ -274,26 +274,27 @@ body {
   .search-bar {
     flex-grow: 1;
     margin-left: 2%;
+}
+
+.search-form {
     display: flex;
     align-items: center;
-  }
-  
-  .search-input {
-    width: 95%; /* Adjusted to take 100% width on smaller screens */
-    padding: 8px;
+}
+
+input[name="q"] {
+    width: 90%;
+    padding: 6px;
     font-size: 16px;
-    border: none;
+    border: 2px solid black;
     border-radius: 4px;
-  }
-  
-  .fa-search {
-    margin-left: -5%;
+    margin-right: 14px;
+}
+
+.searchbb {
     color: firebrick;
     font-size: 18px;
     cursor: pointer;
-    margin-top: 7px;
-  
-  }
+}
   
   /* navigations */
   nav {
@@ -1026,11 +1027,10 @@ body {
   #edit_category_buttons button {
     padding: 10px;
     margin-right:30px;
-    background-color:orangered ;
+    background-color: white ;
     color: black;
     font-weight: bold;
-    border: none;
-    border: 2px solid orangered;
+    border: 2px solid orange;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -1038,7 +1038,7 @@ body {
 
   #edit_category_buttons button:hover {
     color: black;
-    background-color: white;
+    background-color: orange;
   }
   .h1item{
     margin-right: 10px;
@@ -1068,16 +1068,17 @@ body {
 
 /* Styles for buttons */
 #categoryFormId button {
-  background-color: #3498db;
-  color: #fff;
+  background-color: white;
+  color: black;
   padding: 10px;
-  border: none;
+  border: 2px solid orange;
   border-radius: 5px;
   cursor: pointer;
 }
 
 #categoryFormId button:hover {
-  background-color: #2980b9;
+  background-color: orange;
+  color:#000;
 }
 
 /* Styles for success message */
@@ -1105,19 +1106,19 @@ body {
 }
 /*remove */
 button {
-  background-color: #E67C37;
+  background-color: white;
   margin-top: 5px;
   color: black;
-  border: 2px solid #E67C37;
+  border: 2px solid orange;
   padding: 5px;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s;
+  
 }
 
 button:hover {
-  color: black;
-  background-color: #fff;
+  background-color: orange;
 }
 
 /* Icon styles */
@@ -1181,13 +1182,14 @@ button p:hover {
 }
 
 .delete_confirm {
-  background-color: #e74c3c;
-  color: #fff;
+  background-color: white;
+  color: black;
+  border: 2px solid orange;
 }
 
 .delete_denied, .back_button {
-  background-color: #3498db;
-  color: #fff;
+  background-color: white;
+  color: black;
 }
 
 
@@ -1339,9 +1341,9 @@ button p:hover {
 }
 
 .item-borrow-row input[type="submit"] {
-  background-color: #3498db;
-  color: #fff;
-  border: none;
+  background-color: white;
+  color: black;
+  border: 2px solid orange;
   cursor: pointer;
   padding: 12px;
   border-radius: 5px;
@@ -1399,15 +1401,16 @@ button p:hover {
   resize: vertical; /* Allow vertical resizing of textarea */
 }
 /* Style for the submit button */
+/*add category button*/
 input[type="submit"] {
   padding: 10px;
-  background-color: orangered;
-  color: #fff;
-  border: 2px solid orangered;
+  background-color: white;
+  color: black;
+  border: 2px solid orange;
   cursor: pointer;
 }
 input[type="submit"]:hover{
-  background-color: white;
+  background-color: orange;
   color: black;
 }
 /* Style for the cancel button */
@@ -1415,19 +1418,21 @@ input[type="submit"]:hover{
   padding: 10px;
   background-color: white;
   color: black;
-  border: 2px solid orangered;
+  border: 2px solid orange;
   cursor: pointer;
   margin-left: 10px; /* Optional: Add some space between buttons */
 }
 .additem-button:hover{
-  background-color: orangered;
-  color: white;
+  background-color: orange;
+  color: black;
 }
 
 /* Optional: Hover effects */
 input[type="submit"]:hover,
 button:hover {
   opacity: 0.8;
+  color:#000;
+  background-color: orange;
 }
 /*next popup*/
 .form-next {
@@ -1451,16 +1456,16 @@ button:hover {
     padding: 10px;
     background-color: white;
     color: black;
-    border: 2px solid orangered;
+    border: 2px solid orange;
     cursor: pointer;
 }
 #stockFormPopup button:hover{
   margin-top: 10px;
   padding: 10px;
-  background-color: #e74c3c;
-  color: white;
+  background-color: orange;
+  color: black;
 }
-/*category*/
+
 /* Style for the form popup container */
         .form-popup {
             display: block; /* Set to 'block' to make the form open by default */
@@ -1478,11 +1483,12 @@ button:hover {
         }
 
         /* Style for the "Submit" button */
+        /* add item button final*/
         .form-popup input[type="submit"] {
             padding: 10px;
-            background-color: #3498db;
-            color: #fff;
-            border: none;
+            background-color: white;
+            color: black;
+            border: 2px solid orange;
             cursor: pointer;
         }
 
@@ -1490,10 +1496,13 @@ button:hover {
         .form-popup button {
             margin-top: 10px;
             padding: 10px;
-            background-color: #e74c3c;
-            color: #fff;
-            border: none;
+            background-color: white;
+            color: black;
+            border: 2px solid orange;
             cursor: pointer;
+        }
+        .form-popup input[type="submit"]:hover{
+          background-color: orange
         }
 
 /* Add this to your existing styles or in a separate stylesheet */
@@ -1517,7 +1526,7 @@ button:hover {
 }
 
 .success-popup button {
-  background-color: orangered; /* Dark green button color */
+  background-color: orange; /* Dark green button color */
   color: white;
   padding: 10px 20px;
   border: none;
@@ -1528,8 +1537,8 @@ button:hover {
 }
 
 .success-popup button:hover {
-  background-color: white;
-  color: black
+  background-color: orange;
+  color: black;
 }
         
 /*delete category*/
@@ -1567,9 +1576,9 @@ button:hover {
 }
 
 .confirmation-popup button {
-  color: white;
+  color: black;
   padding: 10px 20px;
-  border: 2px solid orangered;
+  border: 2px solid orange;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 10px;
@@ -1577,7 +1586,7 @@ button:hover {
 }
 
 .confirmation-popup button:hover {
-  background-color: white; /* Slightly lighter color on hover */
+  background-color: orange; /* Slightly lighter color on hover */
   color: black;
 }
 
@@ -1650,7 +1659,7 @@ button:hover {
   justify-content: space-between;
   padding: 10px 10px;
   position: absolute;
-  margin-top: 350px;
+  margin-top: 300px;
   margin-left: 80px;
   top: 0;
   left: 0;
@@ -1659,9 +1668,13 @@ button:hover {
 
 #edit_back_buttons button {
   margin-right: 10px; /* Adjust the right margin for spacing */
-  border: 4px solid black;
+  border: 2px solid orange;
   font-size: 18px;
   font-weight: 500;
+  background-color: white;
+}
+#edit_back_buttons button:hover {
+  background-color: orange;
 }
 
 
