--- a/static/recents/recentstyle.css
+++ b/static/recents/recentstyle.css
@@ -217,7 +217,6 @@ body {
     width: 80px;
     margin-left: auto;
   }
-  
   .search-bar {
     display: flex;
     align-items: center;
@@ -226,22 +225,25 @@ body {
 .search-form {
     display: flex;
     align-items: center;
-    width: 100%;
+    margin-left: 10px; /* Adjust the margin as needed */
 }
 
 input[name="q"] {
-    padding: 6px;
-    width: 100%;
+    padding: 8px;
     font-size: 16px;
     border: 2px solid black;
     border-radius: 4px;
-    margin-right: 10px; /* Add margin-right to provide space between the input and the button */
+    margin-right: 10px;
 }
 
 .searchbb {
     color: firebrick;
     font-size: 18px;
     cursor: pointer;
+    padding: 8px 12px; /* Adjust padding as needed */
+    border: 2px solid firebrick; 
+    border-radius: 4px;
+    background-color: white;
 }
   
   /* navigations */
