--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -20,7 +20,13 @@
         {% include 'home/result_list_admin.html' %}
 
         {% for users in faculty %}
-          <button>{{ users.username }}</button>
+          <button onclick="showUser('{{ users.id }}')">{{ users.username }}</button>
         {% endfor %}
+
+        <div id="user_info" class="user_info">
+
+        </div>
     </body>
+
+    <script defer src="{% static 'members/memberscript.js' %}"></script>
 </html>
